--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@heroicons/react": "^2.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^17.0.0",
+    "@testing-library/react": "^14.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,8 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^6.6.0",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-webpack-plugin": "^5.0.0",
